--- a/app/src/main/res/layout/thought_list_view.xml
+++ b/app/src/main/res/layout/thought_list_view.xml
@@ -65,4 +65,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listViewThoughtTxt"
         app:srcCompat="@android:drawable/btn_star_big_on" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/listViewNumLikesLb"
+        app:layout_constraintStart_toEndOf="@+id/listViewNumLikesLb"
+        app:layout_constraintTop_toTopOf="@+id/listViewNumLikesLb"
+        app:srcCompat="@drawable/commenticon" />
+
+    <TextView
+        android:id="@+id/numCommentsLbl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="99"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
