--- a/app/src/main/res/layout/thought_list_view.xml
+++ b/app/src/main/res/layout/thought_list_view.xml
@@ -26,9 +26,9 @@
         android:text="Oct 11, 9:06.PM"
         android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/listViewUsername"
+        app:layout_constraintBottom_toBottomOf="@+id/thoughtOptionsImage"
         app:layout_constraintStart_toEndOf="@+id/listViewUsername"
-        app:layout_constraintTop_toTopOf="@+id/listViewUsername" />
+        app:layout_constraintTop_toTopOf="@+id/thoughtOptionsImage" />
 
     <TextView
         android:id="@+id/listViewThoughtTxt"
@@ -85,4 +85,15 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
+
+    <ImageView
+        android:id="@+id/thoughtOptionsImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/optionsimagedark" />
 </androidx.constraintlayout.widget.ConstraintLayout>
